<resources>
    <string name="app_name">WeatherApp</string>
    <string name="permission_dialog_message">Permission to access your location is required to use this function</string>
    <string name="permission_dialog_title">Permission required</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="humidity">HUMIDITY</string>
    <string name="humidity_value">%d%%</string>
    <string name="wind">WIND</string>
    <string name="wind_value">%s %.2f m/s</string>
    <string name="pressure">PRESSURE</string>
    <string name="pressure_value">%.2f mm Hg</string>
    <string name="temperature_label">°C</string>
    <string name="show_weather">SHOW WEATHER</string>
    <string name="close_window_icon">Close window icon</string>
    <string name="cityLatlng">%f, %f</string>
    <string name="search_icon">Search Icon</string>
    <string name="search_toast_text">Search will be implemented soon</string>
    <string name="share_toast_text">Share will be implemented soon</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_retry">Retry</string>
    <string name="share">Share</string>
    <string name="marker_title">You are here</string>
    <string name="no_city_error_text">No city here</string>
    <string name="current_location_error_text">Can\'t get your current location</string>
    <string name="check_connection_error_text">Can\'t get city location. Check your Internet connection</string>
    <string name="host_failure_error_text">Can\'t reach server. Check your Internet connection</string>
    <string name="no_weather_data_error_text">There is no weather data for this place</string>
    <string name="banner_image">Banner Image</string>
    <string name="no_image_error_text">No image for this weather</string>
</resources>